--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="js/jquery.serialize-object.min.js"></script>
+    <script src="js/htmlform.js"></script>
+
   </head>
 
   <body id="page-top">
@@ -428,6 +432,7 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
     <script src="js/htmlform.js"></script>
 
