--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
-    <script src="js/htmlform.js"></script>
+    <script src="js/htmlform.js"></script> -->
 
   </head>
 
