--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
-    <!-- <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendors/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
     <script src="js/htmlform.js"></script> -->
 
