--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
-    <!-- <script src="vendors/jquery/jquery.min.js"></script>
+    <script src="vendors/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
-    <script src="js/htmlform.js"></script> -->
+    <script src="js/htmlform.js"></script>
 
   </head>
 
@@ -432,9 +432,9 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
-    <script src="js/htmlform.js"></script>
+    <script src="js/htmlform.js"></script> -->
 
     <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
     <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
