--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
-    <script src="vendors/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
     <script src="js/htmlform.js"></script>
 
@@ -432,7 +432,7 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
 
 
     <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
@@ -440,8 +440,8 @@
     <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
-    <script src="js/jquery.serialize-object.min.js"></script>
-    <script src="js/htmlform.js"></script>
+    <!-- <script src="js/jquery.serialize-object.min.js"></script>
+    <script src="js/htmlform.js"></script> -->
 
   </body>
 
