--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="css/update.css" rel="stylesheet">
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
     <script src="js/htmlform.js"></script>
