--- a/index.html
+++ b/index.html
@@ -435,11 +435,16 @@
 
     <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+    <script src="js/jquery.serialize-object.min.js"></script>
+    <script src="js/htmlform.js"></script>
+
 
     <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
     <script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
     <script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script> -->
 
     <!-- <script src="js/jquery.serialize-object.min.js"></script>
     <script src="js/htmlform.js"></script> -->
