--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text">Sign up for more information:</p>
 
-              <form name="submit-to-google-sheet" id="submit-to-google-sheet">
+              <form name="submit-to-google-sheet" id="submit-to-google-sheet" action="#">
 
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
