--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
-    <script src="js/htmlform.js"></script>
+    <!-- <script src="js/htmlform.js"></script> -->
 
   </head>
 
@@ -436,9 +436,9 @@
     <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="js/jquery.serialize-object.min.js"></script>
-    <!-- <script src="js/htmlform.js"></script> -->
+    <script src="js/htmlform.js"></script>
 
 
     <script src="https://wzrd.in/standalone/formdata-polyfill"></script>
