--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                   <button type="submit" id="submit-form" class="btn btn-default btn-lg">LET'S GO!</button>
 
                 </div>
+
+                <div style="display:none"; id=thankyou_message>
+                  <h2>Thanks for your submission!</h2>
+                </div>
               </form>
 
 
