--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </div>
 
             <div class="col-lg-6 mx-auto malign text-align-left">
+              <p> A one-day event that brings together individuals from all disciplines and all levels of training to brainstorm solutions to challenges in surgery and pitch for prizes.<br><br></p>
+
               <p class="intro-text">Sign up for more information:</p>
 
 
