--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             <p>Prize 2</p>
           </div>
           <div class="col-md-4 mx-auto">
-            <h2 style="font-weight:300; font-size: 18pt">TRACK TWO</h2>
-            <h2>EMPOWERING<span style="background-color: #03a9f4; color: #ffffff">&nbspSURGEONS&nbsp</span></h2>
+            <h2 style="font-weight:300; font-size: 18pt">TRACK THREE</h2>
+            <h2>EMPOWERING   <span style="background-color: #03a9f4; color: #ffffff">&nbspSURGEONS&nbsp</span></h2>
             <p>Surgeons face many obstacles both inside the operating room and outside. From juggling their various responsibilities in the OR with their responsibilities to their families, combating burnout, to challenging gender and racial disparities, being a surgeon can be both mentally and emotionally taxing. In this track, we encourage participants to challenge the status quo and come up with innovative solutions for the many problems faced by surgeons in their every day lives. </p>
-            <p>Prize 2</p>
+            <p>Prize 3</p>
           </div>
         </div>
 
