--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
             <h2 style="font-weight:300; font-size: 18pt">TRACK ONE</h2>
             <h2>DEVICE <span style="background-color: #03a9f4; color: #ffffff">&nbspDESIGN&nbsp</span></h2>
             <p>One of the essential challenges in surgery is to design instruments that are effective, durable, biologically compatible, and practical. Whether it is making precise incisions, controlling bleeding, improving visual fields, or connecting tissue, there are a wide-variety of tasks that must be accomplished during an operation. In this track, we encourage participants to form novel ideas for solutions that could solve common challenges faced within the operating room.</p>
-            <p>Prize 1</p>
+            <!-- <p>Prize 1</p> -->
           </div>
           <div class="col-md-4 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK TWO</h2>
             <h2>PATIENT <span style="background-color: #03a9f4; color: #ffffff">&nbspEXPERIENCE&nbsp</span></h2>
             <p>A key component of the surgical experience takes place outside of the operating room. From clinical diagnosis, to hospital admission, and ultimately follow up, the physical and emotional process of undergoing surgery is often laden with inconveniences and burdens. In this track, we encourage participants to identify problems and propose solutions to improve the overall patient surgical experience.</p>
-            <p>Prize 2</p>
+            <!-- <p>Prize 2</p> -->
           </div>
           <div class="col-md-4 mx-auto">
             <h2 style="font-weight:300; font-size: 18pt">TRACK THREE</h2>
             <h2>EMPOWERING   <span style="background-color: #03a9f4; color: #ffffff">&nbspSURGEONS&nbsp</span></h2>
             <p>Surgeons face many obstacles both inside the operating room and outside. From juggling their various responsibilities in the OR with their responsibilities to their families, combating burnout, to challenging gender and racial disparities, being a surgeon can be both mentally and emotionally taxing. In this track, we encourage participants to challenge the status quo and come up with innovative solutions for the many problems faced by surgeons in their every day lives. </p>
-            <p>Prize 3</p>
+            <!-- <p>Prize 3</p> -->
           </div>
         </div>
 
