--- a/index.html
+++ b/index.html
@@ -159,18 +159,17 @@
             <p>7PM - Welcome - TAC Auditorium</p>
             <p>9PM - Networking Reception - Local Venue</p>
             <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
-            <p>7AM - Breakfast - TAC Lobby</p>
-            <p>8AM - Opening Remarks - TAC Auditorium</p>
-            <p>8:30AM - Problem Pitches</p>
+            <p>8AM - Check in and Breakfast - TAC Lobby</p>
+            <p>9AM - Opening Remarks - TAC Auditorium</p>
+            <p>9:15AM - Keynote Address - Dr. Nita Ahuja</p>
           </div>
           <div class="col-md-6">
-            <p>9AM - Team Formation</p>
-            <p>9:30AM - Preliminary Idea Pitches</p>
-            <p>10AM - Hacking Begins - Harkness</p>
+            <p>9:30AM - Problem Pitches</p>
+            <p>10:30AM - Team Formation</p>
+            <p>11AM - Hacking Begins - Harkness</p>
             <p>12PM - Lunch - Harkness</p>
             <p>5PM - Final Pitches - TAC Auditorium</p>
-            <p>6PM - Reception</p>
-            <p>6:30PM - Winners Announced</p>
+            <p>6:30PM - Reception & Awards</p>
           </div>
         </div>
 
