--- a/index.html
+++ b/index.html
@@ -155,20 +155,20 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2>
-            <p>7PM - Welcome - TAC Auditorium</p>
-            <p>9PM - Networking Reception - Local Venue</p>
+            <!-- <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2> -->
+            <!-- <p>7PM - Welcome - TAC Auditorium</p>
+            <p>9PM - Networking Reception - Local Venue</p> -->
             <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
             <p>8AM - Check in and Breakfast - TAC Lobby</p>
             <p>9AM - Opening Remarks - TAC Auditorium</p>
             <p>9:15AM - Keynote Address - Dr. Nita Ahuja</p>
-          </div>
-          <div class="col-md-6">
             <p>9:30AM - Problem Pitches</p>
             <p>10:30AM - Team Formation</p>
-            <p>11AM - Hacking Begins - Harkness</p>
-            <p>12PM - Lunch - Harkness</p>
-            <p>5PM - Final Pitches - TAC Auditorium</p>
+          </div>
+          <div class="col-md-6">
+            <p>11AM - Hacking Begins</p>
+            <p>12PM - Lunch</p>
+            <p>5PM - Final Pitches</p>
             <p>6:30PM - Reception & Awards</p>
           </div>
         </div>
