--- a/go.html
+++ b/go.html
@@ -158,7 +158,7 @@
 
 
     <!-- About Section -->
-    <section id="about" class="p-0" id="portfolio">
+    <!-- <section id="about" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -169,10 +169,21 @@
           </div>
         </div>
       </div>
+    </section> -->
+    <section id="about" class="content-section text-align-left">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
+
+          </div>
+        </div>
+      </div>
     </section>
 
-
-    <section class="p-0" id="portfolio">
+    <!-- <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -279,7 +290,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
     <!-- Footer -->
