--- a/go.html
+++ b/go.html
@@ -176,9 +176,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto text-center">
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br>
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br><br><br>
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br><br><br>
+              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">BUTTON 1</a><br><br><br>
           </div>
         </div>
       </div>
