--- a/go.html
+++ b/go.html
@@ -153,11 +153,20 @@
           </div> -->
         <!-- </div>
       </div> -->
-      <p> Some text here </p>
+
 
     </header>
 
-
+    <section id="about" class="p-0" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>MAKING SURGERY BETTER STARTS<span style="background-color: #03a9f4; color: #ffffff">&nbspHERE&nbsp</span></h2>
+            <p> Here you will find useful links to use throughout the day.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- About Section -->
     <!-- <section id="about" class="p-0" id="portfolio">
@@ -172,7 +181,7 @@
         </div>
       </div>
     </section> -->
-    <section id="about" class="content-section text-align-left">
+    <section id="links" class="content-section text-align-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto text-center">
