--- a/go.html
+++ b/go.html
@@ -161,7 +161,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2>MAKING SURGERY BETTER STARTS<span style="background-color: #03a9f4; color: #ffffff">&nbspHERE&nbsp</span></h2>
+            <h2>MAKING SURGERY BETTER STARTS <span style="background-color: #03a9f4; color: #ffffff">&nbspHERE&nbsp</span></h2>
             <p> Here you will find useful links to use throughout the day.</p>
           </div>
         </div>
@@ -185,9 +185,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto text-center">
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">PAIN POINTS</a><br><br><br>
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">TEAM REGISTRATION</a><br><br><br>
-              <a href="https://www.youcaring.com/handhelpinc-994886/donate/general?utm_source=widget#wp" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
+              <a href="https://docs.google.com/spreadsheets/d/1DuK1fIn88eZ9Owx7bTltXdSXVdBkJB8fVoCf7k3ImaI/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">PAIN POINTS</a><br><br><br>
+              <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">TEAM REGISTRATION</a><br><br><br>
+              <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
           </div>
         </div>
       </div>
