--- a/go.html
+++ b/go.html
@@ -184,10 +184,222 @@
     <section id="links" class="content-section text-align-left">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 mx-auto text-center">
+          <div class="col-lg-6 mx-auto text-center">
               <a href="https://docs.google.com/spreadsheets/d/1DuK1fIn88eZ9Owx7bTltXdSXVdBkJB8fVoCf7k3ImaI/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">PAIN POINTS</a><br><br><br>
               <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">TEAM REGISTRATION</a><br><br><br>
               <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
+          </div>
+          <div class="col-lg-6 mx-auto text-center">
+              <a href="https://docs.google.com/spreadsheets/d/1DuK1fIn88eZ9Owx7bTltXdSXVdBkJB8fVoCf7k3ImaI/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">MENTORS</a><br><br><br>
+              <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">JUDGES</a><br><br><br>
+              <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">MAPS</a><br><br><br>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Mentors  -->
+    <section class="p-0" id="portfolio">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters popup-gallery">
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
+              <img class="img-fluid" src="img/resources/timbrown.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Tim Brown
+                  </div>
+                  <div class="project-category text-faded">
+                    IDEO
+                  </div>
+                  <div class="blurb-text">
+                    <p>A Ted talk on Design Thinking</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=w7rnVbFxC4M">
+              <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Thomas Krummel, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Stanford Biodesign
+                  </div>
+                  <div class="blurb-text">
+                    <p>A pediatric surgeon discusses innovation in surgery</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
+              <img class="img-fluid" src="img/resources/mithackathon.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    MIT Hackathon
+                  </div>
+                  <div class="project-category text-faded">
+                    The Atlantic
+                  </div>
+                  <div class="blurb-text">
+                    <p>A video highlighting what a hackathon is like</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="https://www.youtube.com/watch?v=a8JVKZidmv8">
+              <img class="img-fluid" src="img/resources/austinclements.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Austin Clements
+                  </div>
+                  <div class="project-category text-faded">
+                    Ten One Ten Ventures
+                  </div>
+                  <div class="blurb-text">
+                    <p>Delivering the perfect pitch</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/caty.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Michael Caty, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/khalid.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Ayesha Khalid, MD, MBA
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- JUDGES -->
+    <section class="p-0" id="portfolio">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters popup-gallery">
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/caty.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Michael Caty, MD, MMM
+                  </div>
+                  <div class="project-category text-faded">
+                    Chief, Pediatric Surgery
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/swallow.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Brigid Killelea, MD, MPH, FACS
+                  </div>
+                  <div class="project-category text-faded">
+                    Associate Professor of Surgery
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/kristin.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Ronnie Rosenthal, MD, MS
+                  </div>
+                  <div class="project-category text-faded">
+                    Surgeon-in-Chief, Connecticut VA
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/stitelman.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    David Stitelman, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Assistant Professor of Surgery
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/caty.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Michael Caty, MD
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/khalid.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
+                    Ayesha Khalid, MD, MBA
+                  </div>
+                  <div class="project-category text-faded">
+                    Advisor
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
