--- a/go.html
+++ b/go.html
@@ -313,7 +313,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/caty.jpg" alt="">
+              <img class="img-fluid" src="img/team/caty.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -332,6 +332,21 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
+                    Jonathan S. Feinstein
+                  </div>
+                  <div class="project-category text-faded">
+                    Professor of Economics and Management
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="">
+              <img class="img-fluid" src="img/team/killelea.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-name">
                     Brigid Killelea, MD, MPH, FACS
                   </div>
                   <div class="project-category text-faded">
@@ -343,14 +358,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/kristin.png" alt="">
+              <img class="img-fluid" src="img/team/rosenthal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Ronnie Rosenthal, MD, MS
+                    Ronnie Rosenthal, MD
                   </div>
                   <div class="project-category text-faded">
-                    Surgeon-in-Chief, Connecticut VA
+                    Surgeon-In-Chief, VA Connecticut
                   </div>
                 </div>
               </div>
@@ -366,21 +381,6 @@
                   </div>
                   <div class="project-category text-faded">
                     Assistant Professor of Surgery
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/caty.png" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-name">
-                    Michael Caty, MD
-                  </div>
-                  <div class="project-category text-faded">
-                    Advisor
                   </div>
                 </div>
               </div>
