--- a/go.html
+++ b/go.html
@@ -310,6 +310,11 @@
     <!-- JUDGES -->
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>HACKATHON<span style="background-color: #03a9f4; color: #ffffff">&nbspJUDGES&nbsp</span></h2>
+          </div>
+        </div>
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
@@ -328,7 +333,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/swallow.png" alt="">
+              <img class="img-fluid" src="img/team/feinstein.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
