--- a/go.html
+++ b/go.html
@@ -157,7 +157,7 @@
 
     </header>
 
-    <section id="about" class="p-0" id="portfolio">
+    <section id="about" class="content-section text-align-left">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -201,6 +201,12 @@
     <!-- Mentors  -->
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>HACKATHON<span style="background-color: #03a9f4; color: #ffffff">&nbspMENTORS&nbsp</span></h2>
+            <br><br>
+          </div>
+        </div>
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
@@ -307,12 +313,14 @@
         </div>
       </div>
     </section>
+
     <!-- JUDGES -->
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2>HACKATHON<span style="background-color: #03a9f4; color: #ffffff">&nbspJUDGES&nbsp</span></h2>
+            <br><br>
           </div>
         </div>
         <div class="row no-gutters popup-gallery">
