--- a/go.html
+++ b/go.html
@@ -153,12 +153,8 @@
           </div> -->
         <!-- </div>
       </div> -->
-
-
     </header>
 
-
-    <!-- About Section -->
     <!-- <section id="about" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
@@ -171,7 +167,7 @@
         </div>
       </div>
     </section> -->
-    <section id="links" class="content-section text-align-left">
+    <section id="links" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
