--- a/go.html
+++ b/go.html
@@ -167,7 +167,7 @@
         </div>
       </div>
     </section> -->
-    <section id="links" class="p-0" id="portfolio">
+    <section id="links" class="p-0">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -178,7 +178,7 @@
         <div class="row">
           <div class="col-lg-6 mx-auto text-center">
               <a href="https://docs.google.com/spreadsheets/d/1DuK1fIn88eZ9Owx7bTltXdSXVdBkJB8fVoCf7k3ImaI/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">PAIN POINTS</a><br><br><br>
-              <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">TEAM REGISTRATION</a><br><br><br>
+              <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">REGISTER TEAM</a><br><br><br>
               <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
           </div>
           <div class="col-lg-6 mx-auto text-center">
