--- a/go.html
+++ b/go.html
@@ -191,15 +191,19 @@
     </section>
 
     <!-- Mentors  -->
-    <section class="p-0" id="portfolio">
-      <div class="container-fluid p-0">
+    <section id="about" class="p-0" id="portfolio">
+      <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <br>
-            <h2>HACKATHON<span style="background-color: #03a9f4; color: #ffffff">&nbspMENTORS&nbsp</span></h2>
-            <br>
+            <h2>MENTORS</h2>
+            <p> These will be the mentors. </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="p-0" id="portfolio">
+      <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
@@ -308,6 +312,19 @@
     </section>
 
     <!-- JUDGES -->
+    <section id="about" class="p-0" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+
+
+            <h2>JUDGES<span style="background-color: #03a9f4; color: #ffffff">&nbspCONSIDERATION&nbsp</span></h2>
+            <p> These will be the judges.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row">
