--- a/go.html
+++ b/go.html
@@ -186,7 +186,6 @@
               <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">JUDGES</a><br><br><br>
               <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">MAPS</a><br><br><br>
           </div>
-          <br><br>
         </div>
       </div>
     </section>
@@ -196,6 +195,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
+            <br><br><br>
             <h2>MENTORS</h2>
             <p> These will be the mentors. </p>
           </div>
@@ -318,8 +318,8 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
 
-            <br>
-            <h2>JUDGES<span style="background-color: #03a9f4; color: #ffffff">&nbspCONSIDERATION&nbsp</span></h2>
+            <br><br>
+            <h2>JUDGES</h2>
             <p> These will be the judges.</p>
           </div>
         </div>
