--- a/go.html
+++ b/go.html
@@ -212,14 +212,14 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Tim Brown
+                    David Mulligan, MD, FACS
                   </div>
                   <div class="project-category text-faded">
-                    IDEO
+                    Chief, Transplant Surgery
                   </div>
-                  <div class="blurb-text">
+                  <!-- <div class="blurb-text">
                     <p>A Ted talk on Design Thinking</p>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </a>
@@ -230,14 +230,14 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Thomas Krummel, MD
+                    Kurt Roberts, MD, FACS
                   </div>
                   <div class="project-category text-faded">
-                    Stanford Biodesign
+                    Associate Professor of Surgery
                   </div>
-                  <div class="blurb-text">
+                  <!-- <div class="blurb-text">
                     <p>A pediatric surgeon discusses innovation in surgery</p>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </a>
@@ -248,14 +248,14 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    MIT Hackathon
+                    John Geibel, DSc, MD
                   </div>
                   <div class="project-category text-faded">
-                    The Atlantic
+                    Director, Surgical Research
                   </div>
-                  <div class="blurb-text">
+                  <!-- <div class="blurb-text">
                     <p>A video highlighting what a hackathon is like</p>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </a>
@@ -266,14 +266,14 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Austin Clements
+                    Maxwell Laurans, MD, MBA, FAANS
                   </div>
                   <div class="project-category text-faded">
-                    Ten One Ten Ventures
+                    Assistant Professor of Neurosurgery
                   </div>
-                  <div class="blurb-text">
+                  <!-- <div class="blurb-text">
                     <p>Delivering the perfect pitch</p>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </a>
