--- a/go.html
+++ b/go.html
@@ -406,15 +406,15 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/khalid.png" alt="">
+              <img class="img-fluid" src="img/team/background.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-name">
+                  <!-- <div class="project-name">
                     Ayesha Khalid, MD, MBA
                   </div>
                   <div class="project-category text-faded">
                     Advisor
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </a>
