--- a/go.html
+++ b/go.html
@@ -208,7 +208,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
-              <img class="img-fluid" src="img/resources/timbrown.png" alt="">
+              <img class="img-fluid" src="img/team/mulligan.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -226,7 +226,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=w7rnVbFxC4M">
-              <img class="img-fluid" src="img/resources/thomaskrummel.png" alt="">
+              <img class="img-fluid" src="img/team/roberts.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -244,7 +244,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=x6-JhKUkupY">
-              <img class="img-fluid" src="img/resources/mithackathon.jpg" alt="">
+              <img class="img-fluid" src="img/team/geibel.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -262,7 +262,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
               <a class="portfolio-box" href="https://www.youtube.com/watch?v=a8JVKZidmv8">
-              <img class="img-fluid" src="img/resources/austinclements.png" alt="">
+              <img class="img-fluid" src="img/team/laurans.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -280,31 +280,31 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/caty.png" alt="">
+              <img class="img-fluid" src="img/team/background.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-name">
+                  <!-- <div class="project-name">
                     Michael Caty, MD
                   </div>
                   <div class="project-category text-faded">
                     Advisor
                   </div>
-                </div>
+                </div> -->
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="">
-              <img class="img-fluid" src="img/team/khalid.png" alt="">
+              <img class="img-fluid" src="img/team/background.png" alt="">
               <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
+                <!-- <div class="portfolio-box-caption-content">
                   <div class="project-name">
                     Ayesha Khalid, MD, MBA
                   </div>
                   <div class="project-category text-faded">
                     Advisor
                   </div>
-                </div>
+                </div> -->
               </div>
             </a>
           </div>
