--- a/go.html
+++ b/go.html
@@ -208,7 +208,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://www.youtube.com/watch?v=UAinLaT42xY">
-              <img class="img-fluid" src="img/team/mulligan.jpg" alt="">
+              <img class="img-fluid" src="img/team/mulligan.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
@@ -288,8 +288,8 @@
                   </div>
                   <div class="project-category text-faded">
                     Advisor
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
               </div>
             </a>
           </div>
@@ -297,14 +297,14 @@
             <a class="portfolio-box" href="">
               <img class="img-fluid" src="img/team/background.png" alt="">
               <div class="portfolio-box-caption">
-                <!-- <div class="portfolio-box-caption-content">
-                  <div class="project-name">
+                <div class="portfolio-box-caption-content">
+                  <!-- <div class="project-name">
                     Ayesha Khalid, MD, MBA
                   </div>
                   <div class="project-category text-faded">
                     Advisor
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
               </div>
             </a>
           </div>
