--- a/go.html
+++ b/go.html
@@ -182,16 +182,16 @@
               <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">FINAL PITCHES</a><br><br><br>
           </div>
           <div class="col-lg-6 mx-auto text-center">
-              <a href="https://docs.google.com/spreadsheets/d/1DuK1fIn88eZ9Owx7bTltXdSXVdBkJB8fVoCf7k3ImaI/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">MENTORS</a><br><br><br>
-              <a href="https://docs.google.com/spreadsheets/d/1gLYR1uTgIe8dK4lj7xxoKH0MB3AG5SSmvlQR8LXpsL8/edit?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">JUDGES</a><br><br><br>
-              <a href="https://drive.google.com/drive/folders/1-1RqgeFSERBNDIYNlYwWZeMaV0B4MG1j?usp=sharing" class="btn btn-lg" role="button" aria-pressed="true">MAPS</a><br><br><br>
+              <a href="#mentors" class="btn btn-lg" role="button" aria-pressed="true">MENTORS</a><br><br><br>
+              <a href="#judges" class="btn btn-lg" role="button" aria-pressed="true">JUDGES</a><br><br><br>
+              <a href="#schedule" class="btn btn-lg" role="button" aria-pressed="true">SCHEDULE</a><br><br><br>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Mentors  -->
-    <section id="about" class="p-0" id="portfolio">
+    <section id="mentors" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -313,7 +313,7 @@
     </section>
 
     <!-- JUDGES -->
-    <section id="about" class="p-0" id="portfolio">
+    <section id="judges" class="p-0" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -420,6 +420,68 @@
             </a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="schedule" class="content-section text-align-left">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2>SCHEDULE OF <span style="background-color: #03a9f4; color: #ffffff">&nbspEVENTS&nbsp</span></h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <!-- <h2 style="font-weight:300; font-size: 18pt">FRIDAY (OPTIONAL)</h2> -->
+            <!-- <p>7PM - Welcome - TAC Auditorium</p>
+            <p>9PM - Networking Reception - Local Venue</p> -->
+            <h2 style="font-weight:300; font-size: 18pt">SATURDAY</h2>
+            <p>8AM - Check in and Breakfast - TAC Lobby</p>
+            <p>9AM - Opening Remarks - TAC Auditorium</p>
+            <p>9:15AM - Keynote Address - Dr. Nita Ahuja</p>
+            <p>9:30AM - Problem Pitches</p>
+            <p>10:30AM - Team Formation</p>
+          </div>
+          <div class="col-md-6">
+            <p>11AM - Hacking Begins</p>
+            <p>12PM - Lunch</p>
+            <p>5PM - Final Pitches</p>
+            <p>6:30PM - Reception & Awards</p>
+          </div>
+        </div>
+
+        <!-- https://player.vimeo.com/video/268447442 -->
+
+
+
+        <!-- <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Contact Start Bootstrap</h2>
+            <p>Feel free to leave us a comment on the
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
+              on Start Bootstrap to give some feedback about this theme!</p>
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Google+</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div> -->
       </div>
     </section>
 
