--- a/go.html
+++ b/go.html
@@ -197,7 +197,7 @@
           <div class="col-lg-12 mx-auto">
             <br><br><br><br>
             <h2>MENTORS</h2>
-            <p> These will be the mentors. </p>
+            <p>We have compiled a team of experienced mentors who are available throughout the day to help advance your project to the next level.</p>
           </div>
         </div>
       </div>
@@ -320,7 +320,7 @@
 
             <br><br>
             <h2>JUDGES</h2>
-            <p> These will be the judges.</p>
+            <p></p>
           </div>
         </div>
       </div>
