--- a/go.html
+++ b/go.html
@@ -15,7 +15,7 @@
 
     <!-- Custom fonts for this template -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
@@ -213,7 +213,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" data-toggle="modal" href="#modalmulligan">
+            <a class="portfolio-box">
               <img class="img-fluid" src="img/team/mulligan.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -336,7 +336,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="">
+            <a class="portfolio-box" data-toggle="modal" href="#modalcaty">
               <img class="img-fluid" src="img/team/caty.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -613,77 +613,9 @@
 
     <!-- MODALS FOR BIOS -->
 
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Nicaragua 2016</h2>
-                  <!-- <p class="item-intro text-muted">2017</p> -->
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/handhelpteam2016.jpg" alt="">
-                  <!-- <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p> -->
-                  <div class="row">
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Team Leader</span></li>
-                        <li>Grant Thomson</li><br>
-                        <li><span style="font-weight:700">Surgeons</span></li>
-                        <li>Kevin Tomany, MD</li>
-                        <li>Sohel Islam, MD</li>
-                        <li>John Safanda, MD</li>
-                        <li>Steven Williams, MD</li><br>
-                        <li><span style="font-weight:700">Residents/Fellows</span></li>
-                        <li>Marc Walker, MD</li>
-                        <li>Chad Wu, MD</li><br>
-                        <li><span style="font-weight:700">Pediatrics</span></li>
-                        <li>Robert Golenbock, MD</li><br>
-                        <li><span style="font-weight:700">Anesthesia</span></li>
-                        <li>Marcia Bergen, MD</li>
-                        <li>Elena Bukanova, MD</li>
-                      </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Nursing</span></li>
-                        <li>Tracey Kelly</li>
-                        <li>Sean McLaughlin</li>
-                        <li>Brenda Hunt</li>
-                        <li>Linette Stefanatos</li>
-                        <li>Karyn Jozokos</li>
-                        <li>John Tangredi</li><br>
-                        <li><span style="font-weight:700">Hand Therapy</span></li>
-                        <li>Marisa Gillio</li>
-                        <li>Maria Dimario</li><br>
-                        <li><span style="font-weight:700">Research</span></li>
-                        <li>Priscilla Riva</li>
-                        <li>Carolyn Chaung</li>
-                        <li>CJack Kanouzi</li><br>
-                        <li><span style="font-weight:700">Observer</span></li>
-                        <li>Sara Islam</li><br>
-                      </ul>
-                    </div>
-                  </div>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Judge Caty Description -->
+    <div class="portfolio-modal modal fade" id="modalcaty" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -696,153 +628,11 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>Nicaragua 2015</h2>
-                  <!-- <p class="item-intro text-muted">2017</p> -->
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/handhelpteam2015.jpg" alt="">
-                  <!-- <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p> -->
-                  <div class="row">
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Team Leader</span></li>
-                        <li>Grant Thomson</li><br>
-                        <li><span style="font-weight:700">Surgeons</span></li>
-                        <li>Kevin Tomany, MD</li>
-                        <li>Sohel Islam, MD</li>
-                        <li><span style="font-weight:700">Residents/Fellows</span></li>
-                        <li>Raj Sawh-Martinez</li>
-                        <li>Anup Patel, MD</li><br>
-                        <li><span style="font-weight:700">Pediatrics</span></li>
-                        <li>Robert Golenbock, MD</li><br>
-                        <li><span style="font-weight:700">Anesthesia</span></li>
-                        <li>Marcia Bergen, MD</li>
-                        <li>Leyda Carvajal, MD</li>
-                        <li>Gianni Checa, MD</li>
-                        <li>Jose Ossa-Concha, MD</li>
-                        <li>Claudia Perez-Martinez, MD</li>
-                      </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Nursing</span></li>
-                        <li>Tracey Kelly</li>
-                        <li>Sean McLaughlin</li>
-                        <li>Brenda Hunt</li>
-                        <li>Linda Nugent</li>
-                        <li>Karyn Jozokos</li>
-                        <li>John Tangredi</li><br>
-                        <li><span style="font-weight:700">Hand Therapy</span></li>
-                        <li>Kathy Jacobsen</li><br>
-                        <li><span style="font-weight:700">Administration</span></li>
-                        <li>Marisa Gillio</li><br>
-                        <li><span style="font-weight:700">Research</span></li>
-                        <li>Priscilla Riva</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Nicaragua 2014</h2>
-                  <!-- <p class="item-intro text-muted">2017</p> -->
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/handhelpteam2014.jpg" alt="">
-                  <!-- <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p> -->
-                  <div class="row">
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Team Leader</span></li>
-                        <li>Grant Thomson</li><br>
-                        <li><span style="font-weight:700">Surgeons</span></li>
-                        <li>Kevin Tomany, MD</li>
-                        <li>Julio Arias, MD</li>
-                        <li><span style="font-weight:700">Residents/Fellows</span></li>
-                        <li>Garry Martin, MD</li>
-                        <li>Elizabeth Zellner, MD</li><br>
-                        <li><span style="font-weight:700">Pediatrics</span></li>
-                        <li>Karla Pereira, MD</li><br>
-                        <li><span style="font-weight:700">Anesthesia</span></li>
-                        <li>Tori Myslajek, MD</li>
-                        <li>Marcia Bergen, MD</li>
-                        <li>Jordan Martin, MD - Fellow</li>
-                        <li>Mark Giles, CRNA</li>
-                      </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul class="list-inline">
-                        <li><span style="font-weight:700">Nursing</span></li>
-                        <li>Tracey Kelly</li>
-                        <li>Sean McLaughlin</li>
-                        <li>Brenda Hunt</li>
-                        <li>Karyn Jozokos</li>
-                        <li>Melanie Almonte</li>
-                        <li>John Tangredi</li><br>
-                        <li><span style="font-weight:700">Hand Therapy</span></li>
-                        <li>Casey Truax</li><br>
-                        <li><span style="font-weight:700">Administration</span></li>
-                        <li>Marisa Gillio</li><br>
-                        <li><span style="font-weight:700">Research</span></li>
-                        <li>Cameron Thomson</li>
-                        <li>Lauren Blewett</li>
-                        <li>Paisley Thomson</li><br>
-                      </ul>
-                    </div>
-                  </div>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 4 -->
-    <div class="portfolio-modal modal fade" id="modalmulligan" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2>Michael Caty, MD, MMM</h2>
+                  <p class="item-intro text-muted">Chief, Pediatric Surgery</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <button class="btn btn-lg" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
                 </div>
